--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,10 @@
 	<string>we need to take a picture</string>
 	<key>NSCameraUsageDescription</key>
 	<string>we need to take a picture</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Need to get your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need to get your location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
